objects/Campaign_Product_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Product Allocations</relationshipLabel>
        <relationshipName>Campaign_Product_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Campaign Price Allocations</relationshipLabel>
        <relationshipName>Campaign_Item_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueIdentifier__c</fullName>
        <label>UniqueIdentifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Campaign Product Allocation</label>
    <nameField>
        <displayFormat>CPA-{0000}</displayFormat>
        <label>Campaign Product Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Product Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>